--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -20,7 +20,6 @@
 
 .headerContainer {
   padding: 1.5rem 2rem;
-  color: var(--primary-gradient);
 
   display: flex;
   justify-content: space-between;
@@ -28,13 +27,18 @@
 
   position: relative;
 
-  h1 {
-    cursor: pointer;
-    opacity: 0.7;
+  a {
+    text-decoration: none;
+    color: var(--primary-gradient);
 
-    &:hover {
-      opacity: 1;
-      transition: 200ms;
+    h1 {
+      cursor: pointer;
+      opacity: 0.7;
+
+      &:hover {
+        opacity: 1;
+        transition: 200ms;
+      }
     }
   }
 }
