--- a/src/components/stackCard/styles.module.scss
+++ b/src/components/stackCard/styles.module.scss
@@ -19,3 +19,9 @@
     background-color: var(--primary);
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .cardContainer {
+    width: 6.2rem;
+  }
+}
