--- a/src/app/tecnologias/styles.module.scss
+++ b/src/app/tecnologias/styles.module.scss
@@ -2,6 +2,7 @@
   padding: 2rem 0;
   color: var(--neutral-200);
   min-height: 85vh;
+  padding-bottom: 5rem;
 
   display: flex;
   justify-content: center;
@@ -20,6 +21,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 3.2rem;
   padding: 10px;
+}
+
+@media (max-height: 800) {
+  .mainContainer {
+  }
 }
