feat: adicionando animações nas paginas

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -97,6 +97,7 @@
     position: absolute;
     right: 0;
     top: 200%;
+    z-index: 1000;
 
     animation: slideMenu 500ms ease-in-out forwards;
     // animation: 200ms;
