--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -23,6 +23,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    overflow-y: hidden;
 
     h2 {
       font-size: 1.9rem;
