new: criando a pagina de contato
description:
instalando react hook form no projeto
aumentando o tamanho da fonte na pagina de 'sobre mim'
adicionando navegação no header

--- a/src/app/sobre-mim/styles.module.scss
+++ b/src/app/sobre-mim/styles.module.scss
@@ -20,6 +20,9 @@
 
   .mainContainerContent {
     width: 80vw;
+    p {
+      font-size: 1.2rem;
+    }
   }
 
   .image {
@@ -40,8 +43,7 @@
   h2 {
     font-size: 2rem;
   }
-
   p {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
 }
