feat: criando pagina de projetos

--- a/src/app/projetos/styles.module.scss
+++ b/src/app/projetos/styles.module.scss
@@ -1,9 +1,12 @@
 .mainContainer {
-  min-height: 85vh;
-
-  color: white;
-
+  padding: 2rem 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+}
+
+.contentContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
