new: adicionanod group para a home page e atualizando os pacotes

--- a/src/components/ProjectCards/styles.module.scss
+++ b/src/components/ProjectCards/styles.module.scss
@@ -1,6 +1,6 @@
 .card {
   color: var(--neutral-200);
-  padding: 0 2rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
