--- a/src/app/(home)/home.module.scss
+++ b/src/app/(home)/home.module.scss
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
 
+  overflow-y: hidden;
+
   h2 {
     font-size: 2.5rem;
     padding: 0 6.5rem;
@@ -18,9 +20,9 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 768px) {
   .mainContainer {
-    overflow: hidden;
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
