--- a/src/app/projetos/styles.module.scss
+++ b/src/app/projetos/styles.module.scss
@@ -10,3 +10,9 @@
   flex-wrap: wrap;
   gap: 1rem;
 }
+
+@media screen and (max-width: 768px) {
+  .mainContainer {
+    margin-bottom: 4rem;
+  }
+}
